--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,11 @@ dependencies:
   shimmer: ^1.1.1
   font_awesome_flutter: ^8.8.1
   connectivity: '>=0.4.8+6 <2.0.0'
+  firebase_core: ^0.4.5
   firebase_auth: ^0.16.1
+  firebase_storage: ^3.1.6
   cloud_firestore: ^0.13.7
+  image_picker: ^0.6.7+4
   package_info: ^0.4.0+18
   wave: ^0.0.8
 
