--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   package_info: ^0.4.0+18
   wave: ^0.0.8
   datetime_picker_formfield: ^1.0.0
+  modal_bottom_sheet: ^0.2.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
