--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   package_info: ^0.4.0+18
   wave: ^0.0.8
   datetime_picker_formfield: ^1.0.0
-  modal_bottom_sheet: ^0.2.0+1
+  pdf: ^1.10.0
+  path_provider: ^1.6.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
