--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   datetime_picker_formfield: ^1.0.0
   pdf: ^1.10.0
   path_provider: ^1.6.11
+  flutter_full_pdf_viewer: ^1.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
