--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   pdf: ^1.10.0
   path_provider: ^1.6.11
   flutter_full_pdf_viewer: ^1.0.6
+  downloads_path_provider: ^0.1.0
+  permission_handler: ^5.0.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
