--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_full_pdf_viewer: ^1.0.6
   downloads_path_provider: ^0.1.0
   permission_handler: ^5.0.1+1
+  bezier_chart: ^1.0.17+1
+  responsive_grid: ^1.2.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
